--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,10 @@
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
-    <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: 'btn btn-primary btn-lg' %>
+    <% if user_signed_in? %>
+      Signed in as <%= current_user.email %> <%= link_to "Sign Out", destroy_user_session_path %>
+    <% else %>
+      <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: 'btn btn-primary btn-lg' %>
+    <% end %>
   </p>
 </div>
