--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 
   <body>
   <div class="container">
+    <% flash.each do |key, value| %>
+      <div class="mt-2 <%= flash_class(key) %>">
+        <%= value %>
+      </div>
+    <% end %>
     <%= yield %>
     <!-- Content here -->
   </div>
