--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,9 @@
     <% if user_signed_in? %>
       Signed in as <%= current_user.email %> <%= link_to "Sign Out", destroy_user_session_path %>
     <% else %>
-      <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: 'btn btn-primary btn-lg' %>
+      <%= link_to user_google_oauth2_omniauth_authorize_path do %>
+        <%= image_tag 'btn_google_signin_dark_focus_web@2x.png', width: 191 %>
+      <% end %>
     <% end %>
   </p>
 </div>
