--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -1,1 +1,30 @@
-Account Page
+<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+  <a class="navbar-brand" href="/">DB Connector</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarsExample09">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/sign_out">Logout</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container mt-2">
+  <h4>Hi <%= current_user.name %>, here is your spreadsheets.</h4>
+  <ul class="list-group">
+    <% if current_user.spreadsheets.present? %>
+      <% current_user.spreadsheets.each do |spreadsheet| %>
+        <li class="list-group-item"><%= spreadsheet.g_id %>  <%= spreadsheet.name %></li>
+      <% end %>
+    <% else %>
+      <li class="list-group-item">You don't have any spreadsheets</li>
+    <% end %>
+  </ul>
+</div>
