--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,45 @@
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <% if user_signed_in? %>
-      Signed in as <%= current_user.email %> <%= link_to "Sign Out", destroy_user_session_path %>
-    <% else %>
-      <%= link_to user_google_oauth2_omniauth_authorize_path do %>
-        <%= image_tag 'btn_google_signin_dark_focus_web@2x.png', width: 191 %>
-      <% end %>
-    <% end %>
-  </p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>AbpReportConnector</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">DB Connector</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <%= link_to user_google_oauth2_omniauth_authorize_path do %>
+                <%= image_tag 'btn_google_signin_dark_focus_web@2x.png', width: 191 %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+  </body>
+</html>
+
+
