--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,43 @@
   </head>
 
   <body>
-  <div class="container">
-    <% flash.each do |key, value| %>
-      <div class="mt-2 <%= flash_class(key) %>">
-        <%= value %>
-      </div>
-    <% end %>
-    <%= yield %>
-    <!-- Content here -->
-  </div>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">DB Connector</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Spreadsheets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ReportJobs</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/users/sign_out">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="container">
+      <% flash.each do |key, value| %>
+        <div class="mt-2 <%= flash_class(key) %>">
+          <%= value %>
+        </div>
+      <% end %>
+      <%= yield %>
+      <!-- Content here -->
+    </div>
   </body>
 </html>
