Add spreadsheets list page to display all user spreadsheets info and with button go to google sheets

--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -15,7 +15,7 @@
         </tr>
       <% end %>
     </table>
-    <a href="#" class="mt-5">View All Spreadsheets</a>
+    <a href="/spreadsheets" class="mt-5">View All Spreadsheets</a>
   <% else %>
     <p>You have no spreadsheets. <a href="#">Create One Now</a></p>
   <% end %>
