Add sources page for list all database info

--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -38,7 +38,7 @@
         </tr>
       <% end %>
     </table>
-    <a href="#" class="mt-5">View All Databases</a>
+    <a href="/sources" class="mt-5">View All Databases</a>
   <% else %>
     <p>You have no databases. <a href="#">Create One Now</a></p>
   <% end %>
