--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="/spreadsheets">Spreadsheets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ReportJobs</a>
+                <a class="nav-link" href="/spreadsheet_jobs">ReportJobs</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
