--- a/app/views/sources/new.html.erb
+++ b/app/views/sources/new.html.erb
@@ -4,6 +4,10 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
+          <label>Name</label>
+          <%= f.text_field :name, class: 'form-control' %>
+        </div>
+        <div class="form-group">
           <label>DB TYPE</label>
           <%= f.select :db_type, options_for_select(['mysql', 'sqlserver']), {}, class: 'form-control' %>
         </div>
