--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/spreadsheet_jobs">ReportJobs</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/job_notifications">Notifiations</a>
+              </li>
             </ul>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
