Fix typo in menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="/spreadsheet_jobs">ReportJobs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/job_notifications">Notifiations</a>
+                <a class="nav-link" href="/job_notifications">Notifications</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
