--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,19 +21,19 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
+              <li class="nav-item <%= 'active' if controller_name == 'account' %>">
                 <a class="nav-link" href="/account">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= 'active' if controller_name == 'sources' %>">
                 <a class="nav-link" href="/sources">Databases</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= 'active' if controller_name == 'spreadsheets' %>">
                 <a class="nav-link" href="/spreadsheets">Spreadsheets</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= 'active' if controller_name == 'spreadsheet_jobs' %>">
                 <a class="nav-link" href="/spreadsheet_jobs">ReportJobs</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= 'active' if controller_name == 'job_notifications' %>">
                 <a class="nav-link" href="/job_notifications">Notifications</a>
               </li>
             </ul>
