Add scheduled notifications list for cron tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
               <li class="nav-item <%= 'active' if controller_name == 'job_notifications' %>">
                 <a class="nav-link" href="/job_notifications">Notifications</a>
               </li>
+              <li class="nav-item <%= 'active' if controller_name == 'scheduled_notifications' %>">
+                <a class="nav-link" href="/scheduled_notifications">CRON</a>
+              </li>
             </ul>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
