Add feature to create new spreadsheet with name and google sheet id

--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -17,7 +17,7 @@
     </table>
     <a href="/spreadsheets" class="mt-5">View All Spreadsheets</a>
   <% else %>
-    <p>You have no spreadsheets. <a href="#">Create One Now</a></p>
+    <p>You have no spreadsheets. <a href="/spreadsheets/new">Create One Now</a></p>
   <% end %>
 
   <h4>Databases</h4>
