--- a/app/views/spreadsheets/index.html.erb
+++ b/app/views/spreadsheets/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container mt-5">
   <h4>Spreadsheets</h4>
+  <%= link_to 'Create Spreadsheet', new_spreadsheet_path, class: 'btn btn-sm btn-primary' %>
   <table class="table mt-5">
     <tr>
       <th>Name</th>
