Add home layout for public pages home/privacy

--- a/app/views/home/privacy_policy.html.erb
+++ b/app/views/home/privacy_policy.html.erb
@@ -1,57 +1,59 @@
-<div class="std cms-privacy-policy side-margins">
-  <div class="privacy_scrolldiv" style="line-height: 1.25em;">
-    <p class="section-header"><strong>Summary</strong></p>
-    <ul style="font-size: 18px;">
-    <li>DbConnector does not store or share data from your database (i.e. rows and columns)</li>
-    <li>DbConnector’s web application uses encrypted communication and exclusively uses HTTPS.</li>
-    <li>All application integration credentials are kept enycrypted</li>
-    <li>All database connections through DbConnector are encrypted using modern ciphers and cryptographic systems</li>
-    <li>For additional security, we recommend creating a read-only user for your database that has access to only the data you wish to access through our application.</li>
-    </ul>
-    <p class="section-header"><strong>Privacy</strong></p>
-    <p>DbConnector operates the connector.herbdoc.com website and associated applications, including GSuite App Add-ons, which provides the SERVICE.</p>
-    <p>This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
-    <p>If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
-    <p class="section-header"><strong>Information Collection and Use</strong></p>
-    <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to your email address. The information that we collect will be used to contact or identify you.</p>
-    <p class="section-header"><strong>Google account data and services</strong></p>
-    <p>DbConnector uses several Google API's to collect data and perform actions that you initiate. For example, when you schedule a query to be run against your database
-    using DbConnector, we use your authorization to access the Spreadsheet you wanted the results sent to and write data to that sheet. Below is a list of the ways we access
-    your Google user data and actions that the Service performs:
-    <ul>
-        <li>We access your Google account email address (i.e. the one you use to sign into Sheets) to retrieve your DbConnector account information</li>
-        <li>We store about your DbConnector session and account in Google's user properties (e.g. whether you have a paid or free plan)</li>
-        <li>We use the Google Sheets API to make updates or read from your spreadsheet (e.g. adding data or inserting a pivot table)</li>
-        <li>We use external requests to send and retrieve data that is not contained within your Google account (e.g. accessing an external API to get data, calling functions from our own servers, etc.</li>
-    </ul>
-    </p>
-    <p class="section-header"><strong>Data from your Database</strong></p>
-    <p>DbConnector does not store or share data from your database (i.e. rows and columns). We do use error messages returned from your database 
-    to provide accurate error reporting to users. We store metadata such as the number of rows returned by a query and how long a query takes to 
-    run in order to ensure our servers have capacity to handle the demand of our users.
-    </p>
-    <p class="section-header"><strong>Log Data</strong></p>
-    <p>We want to inform you that whenever you visit our Service, we collect information that your browser sends to us that is called Log Data. This Log Data may include information such as your computer’s Internet Protocol (“IP”) address, browser version, pages of our Service that you visit, the time and date of your visit, the time spent on those pages, and other statistics.</p>
-    <p class="section-header"><strong>Cookies</strong></p>
-    <p>Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your computer’s hard drive.</p>
-    <p>Our website uses these “cookies” to collection information and to improve our Service. You have the option to either accept or refuse these cookies, and know when a cookie is being sent to your computer. If you choose to refuse our cookies, you may not be able to use some portions of our Service.</p>
-    <p class="section-header"><strong>Service Providers</strong></p>
-    <p>We may employ third-party companies and individuals due to the following reasons:</p>
-    <ul>
-      <li class="first-child">To facilitate our Service;</li>
-      <li>To provide the Service on our behalf;</li>
-      <li>To perform Service-related services; or</li>
-      <li class="last-child">To assist us in analyzing how our Service is used.</li>
-    </ul>
-    <p>We want to inform our Service users that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
-    <p class="section-header"><strong>Security</strong></p>
-    <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
-    <p class="section-header"><strong>Links to Other Sites</strong></p>
-    <p>Our Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
-    <p class="section-header"><strong>Changes to This Privacy Policy</strong></p>
-    <p>We may update our Privacy Policy from time to time. Thus, we advise you to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately, after they are posted on this page.</p>
-    <p class="section-header"><strong>Contact Us</strong></p>
-    <p>If you have any questions or suggestions about our Privacy Policy, please drop us a note at <a href="mailto:contact@herbdoc.com" target="_blank">contact@herbdoc.com</a></p>
-    <br>
+<div class="container">
+  <div class="std cms-privacy-policy side-margins">
+    <div class="privacy_scrolldiv" style="line-height: 1.25em;">
+      <p class="section-header"><strong>Summary</strong></p>
+      <ul style="font-size: 18px;">
+      <li>DbConnector does not store or share data from your database (i.e. rows and columns)</li>
+      <li>DbConnector’s web application uses encrypted communication and exclusively uses HTTPS.</li>
+      <li>All application integration credentials are kept enycrypted</li>
+      <li>All database connections through DbConnector are encrypted using modern ciphers and cryptographic systems</li>
+      <li>For additional security, we recommend creating a read-only user for your database that has access to only the data you wish to access through our application.</li>
+      </ul>
+      <p class="section-header"><strong>Privacy</strong></p>
+      <p>DbConnector operates the connector.herbdoc.com website and associated applications, including GSuite App Add-ons, which provides the SERVICE.</p>
+      <p>This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
+      <p>If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
+      <p class="section-header"><strong>Information Collection and Use</strong></p>
+      <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to your email address. The information that we collect will be used to contact or identify you.</p>
+      <p class="section-header"><strong>Google account data and services</strong></p>
+      <p>DbConnector uses several Google API's to collect data and perform actions that you initiate. For example, when you schedule a query to be run against your database
+      using DbConnector, we use your authorization to access the Spreadsheet you wanted the results sent to and write data to that sheet. Below is a list of the ways we access
+      your Google user data and actions that the Service performs:
+      <ul>
+          <li>We access your Google account email address (i.e. the one you use to sign into Sheets) to retrieve your DbConnector account information</li>
+          <li>We store about your DbConnector session and account in Google's user properties (e.g. whether you have a paid or free plan)</li>
+          <li>We use the Google Sheets API to make updates or read from your spreadsheet (e.g. adding data or inserting a pivot table)</li>
+          <li>We use external requests to send and retrieve data that is not contained within your Google account (e.g. accessing an external API to get data, calling functions from our own servers, etc.</li>
+      </ul>
+      </p>
+      <p class="section-header"><strong>Data from your Database</strong></p>
+      <p>DbConnector does not store or share data from your database (i.e. rows and columns). We do use error messages returned from your database 
+      to provide accurate error reporting to users. We store metadata such as the number of rows returned by a query and how long a query takes to 
+      run in order to ensure our servers have capacity to handle the demand of our users.
+      </p>
+      <p class="section-header"><strong>Log Data</strong></p>
+      <p>We want to inform you that whenever you visit our Service, we collect information that your browser sends to us that is called Log Data. This Log Data may include information such as your computer’s Internet Protocol (“IP”) address, browser version, pages of our Service that you visit, the time and date of your visit, the time spent on those pages, and other statistics.</p>
+      <p class="section-header"><strong>Cookies</strong></p>
+      <p>Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your computer’s hard drive.</p>
+      <p>Our website uses these “cookies” to collection information and to improve our Service. You have the option to either accept or refuse these cookies, and know when a cookie is being sent to your computer. If you choose to refuse our cookies, you may not be able to use some portions of our Service.</p>
+      <p class="section-header"><strong>Service Providers</strong></p>
+      <p>We may employ third-party companies and individuals due to the following reasons:</p>
+      <ul>
+        <li class="first-child">To facilitate our Service;</li>
+        <li>To provide the Service on our behalf;</li>
+        <li>To perform Service-related services; or</li>
+        <li class="last-child">To assist us in analyzing how our Service is used.</li>
+      </ul>
+      <p>We want to inform our Service users that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
+      <p class="section-header"><strong>Security</strong></p>
+      <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
+      <p class="section-header"><strong>Links to Other Sites</strong></p>
+      <p>Our Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
+      <p class="section-header"><strong>Changes to This Privacy Policy</strong></p>
+      <p>We may update our Privacy Policy from time to time. Thus, we advise you to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately, after they are posted on this page.</p>
+      <p class="section-header"><strong>Contact Us</strong></p>
+      <p>If you have any questions or suggestions about our Privacy Policy, please drop us a note at <a href="mailto:contact@herbdoc.com" target="_blank">contact@herbdoc.com</a></p>
+      <br>
+    </div>
   </div>
 </div>
