--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="row mt-5">
+  <div id="features" class="row mt-5">
     <div class="col-md-6">
       <h2>Your team's SQL repository</h2>
       <p>Share, tag, and discover code written by anyone on your team. Never re-write code someone else has already perfected. </p>
