Update text in home page related to exist features

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">SQL in the apps you already use</h1>
-    <p class="lead text-muted">Get your SQL data in the places you need it like Google Sheets.</p>
+    <p class="lead text-muted">Get your SQL data into Google Sheets.</p>
     <p>
       <a href="#" class="btn btn-primary my-2">Start Free</a>
       <a href="#" class="btn btn-secondary my-2">Book a demo</a>
@@ -16,8 +16,7 @@
       <img src="https://via.placeholder.com/450" />
     </div>
     <div class="col-md-6">
-      <h2>Tightly integrated with the apps your team depends on</h2>
-      <p>Connect to Postgres, MySQL, Snowflake, Redshift, and SQL Server. Send data where your team needs it like Google Sheets, Excel, Slack and email.</p>
+      <p>Connect to MySQL, SQL Server. Send data where your team needs to Google Sheets.</p>
       <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
     </div>
   </div>
@@ -38,7 +37,7 @@
     <tbody>
       <tr>
         <th scope="row">What databases do you support?</th>
-        <td>MySQL, Postgres, Redshift, MS SQL Server, and Snowflake. You can also query Google Sheets, Excel and CSV files just like they were SQL tables. You can even query cross database and files (e.g. join a Google Sheet, Postgres table and MySQL table).</td>
+        <td>MySQL, MS SQL Server.</td>
       </tr>
       <tr>
         <th scope="row">How much does DB Connector cost?</th>
