Add feature images in home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
   <!-- Example row of columns -->
   <div class="row">
     <div class="col-md-6">
-      <img src="https://via.placeholder.com/450" />
+      <%= image_tag 'sheets.png' %>
     </div>
     <div class="col-md-6">
       <p>Connect to MySQL, SQL Server. Send data where your team needs to Google Sheets.</p>
@@ -28,7 +28,7 @@
       <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
     </div>
     <div class="col-md-6">
-      <img src="https://via.placeholder.com/450" />
+      <%= image_tag 'run_job_sql.png' %>
     </div>
   </div>
 
