Fix links in terms and features

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,8 +68,7 @@
           </div>
           <div class="col-md-6 col-md">
             <ul class="list-unstyled text-small list-inline">
-              <li class="list-inline-item"><a class="text-muted" href="/privacy-policy">Privacy</a></li>
-              <li class="list-inline-item"><a class="text-muted" href="#">Terms</a></li>
+              <li class="list-inline-item"><a class="text-muted" href="/privacy-policy">Privacy and Terms</a></li>
             </ul>
           </div>
         </div>
