--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 </section>
 
-<div class="container">
+<div class="container" id="features">
   <!-- Example row of columns -->
   <div class="row">
     <div class="col-md-4">
