--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -9,6 +9,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="google-site-verification" content="ULSelBvkqk8ruEVzwxq92Py1zDL-OIAfujpbOFcYj7Q" />
   </head>
 
   <body>
