--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
     <h1 class="jumbotron-heading">SQL in the apps you already use</h1>
     <p class="lead text-muted">Get your SQL data into Google Sheets.</p>
     <p>
-      <a href="#" class="btn btn-primary my-2">Start Free</a>
-      <a href="#" class="btn btn-secondary my-2">Book a demo</a>
+      <a href="<%= user_google_oauth2_omniauth_authorize_path %>" class="btn btn-primary my-2">Start Free</a>
+      <a href="mailto:admin@herbdoc.com?subject=DB Connector" class="btn btn-secondary my-2">Book a demo</a>
     </p>
   </div>
 </section>
