Update copy to remove beta

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,7 @@
       </tr>
       <tr>
         <th scope="row">How much does DB Connector cost?</th>
-        <td>Free during beta.</td>
+        <td>Free within 10 spreadsheets.</td>
       </tr>
     </tbody>
   </table>
